@@ -2665,9 +2665,13 @@ class LxcRunner(AdtTestCase):
                                     rm -r $ADTTMP/one
                                     echo dir_is_rw > rw_flag
                                     cat rw_flag
+                                    echo hello > $ADT_ARTIFACTS/world.txt
+                                    chmod 600 $ADT_ARTIFACTS/world.txt
                                     whoami'''})
 
-        (code, out, err) = self.adt_run(['-B', p + '//', '--user=nobody'])
+        outdir = os.path.join(self.workdir, 'out')
+        (code, out, err) = self.adt_run(['-B', p + '//', '--user=nobody',
+                                         '--output-dir', outdir])
         self.assertEqual(code, 0, err)
 
         # test should succeed
@@ -2675,6 +2679,9 @@ class LxcRunner(AdtTestCase):
 
         # has output from cats and whoami
         self.assertIn('world\ndeep\ndir_is_rw\nnobody\n', out)
+
+        with open(os.path.join(outdir, 'artifacts', 'world.txt')) as f:
+            self.assertEqual(f.read(), 'hello\n')
 
     def test_no_locale_conf(self):
         '''No /etc/default/locale'''
